# scancontext_ros2

./: CMakeLists.txt  README.md  ScanContextWrapper.cpp  Scancontext.cpp  Scancontext.h  package.xml
include/scancontext_ros2/: KDTreeVectorOfVectorsAdaptor.h  Scancontext.h
src/scancontext_ros2/: Scancontext.cpp
